--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,17 @@ ipython-genutils==0.2.0
 jedi==0.11.0
 numpy==1.13.3
 oauthlib==2.0.6
+pandas==0.21.0
 parso==0.1.0
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
+python-dateutil==2.6.1
 python-twitter==3.3
+pytz==2017.3
+redis==2.10.6
 requests==2.18.4
 requests-oauthlib==0.8.0
 simplegeneric==0.8.1
