--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+astroid==1.5.3
+autopep8==1.3.3
 certifi==2017.7.27.1
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.1.2
 future==0.16.0
 idna==2.6
 ipython==6.2.1
 ipython-genutils==0.2.0
+isort==4.2.15
 jedi==0.11.0
+lazy-object-proxy==1.3.1
+matplotlib==2.1.0
+mccabe==0.6.1
 numpy==1.13.3
 oauthlib==2.0.6
 pandas==0.21.0
@@ -14,7 +21,10 @@ pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
+pycodestyle==2.3.1
 Pygments==2.2.0
+pylint==1.7.4
+pyparsing==2.2.0
 python-dateutil==2.6.1
 python-twitter==3.3
 pytz==2017.3
@@ -27,3 +37,4 @@ traitlets==4.3.2
 Unidecode==0.4.21
 urllib3==1.22
 wcwidth==0.1.7
+wrapt==1.10.11
